--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  
-  <!-- AOS Animation CSS -->
-<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,16 +14,6 @@
   </style>
 </head>
 <body class="bg-gray-50">
-  
-  <!-- AOS Script -->
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>
-  AOS.init({
-    duration: 800,
-    once: true
-  });
-</script>
-
 
   <!-- Navbar -->
   <nav class="flex items-center justify-between px-8 py-4 bg-white shadow">
@@ -283,6 +270,63 @@
     </div>
   </div>
 </section>
+  
+<!-- WHY CHOOSE US SECTION -->
+<!-- Add this full block after your FEATURE AREAS section -->
+
+<!-- AOS Animation CSS -->
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+<section class="py-20 bg-white text-center">
+  <div class="max-w-6xl mx-auto px-6">
+    <h2 class="text-3xl md:text-4xl font-bold text-gray-800 mb-10" data-aos="fade-up">
+      Why Choose <span class="text-blue-600">SecureHome</span>?
+    </h2>
+    <p class="text-gray-600 max-w-3xl mx-auto mb-12" data-aos="fade-up" data-aos-delay="100">
+      We understand what students and landlords need — safety, comfort, and reliability. 
+      Our platform connects you to the best verified hostels around your campus in just a few clicks.
+    </p>
+
+    <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8">
+      <!-- CARD 1 -->
+      <div class="bg-gray-50 p-8 rounded-2xl shadow-md hover:shadow-xl transition" data-aos="zoom-in">
+        <div class="text-blue-600 text-5xl mb-4">🏡</div>
+        <h3 class="text-xl font-semibold text-gray-800 mb-2">Verified Hostels</h3>
+        <p class="text-gray-600">Every hostel is carefully inspected and verified before being listed on our platform.</p>
+      </div>
+
+      <!-- CARD 2 -->
+      <div class="bg-gray-50 p-8 rounded-2xl shadow-md hover:shadow-xl transition" data-aos="zoom-in" data-aos-delay="100">
+        <div class="text-blue-600 text-5xl mb-4">🔐</div>
+        <h3 class="text-xl font-semibold text-gray-800 mb-2">Safe & Secure</h3>
+        <p class="text-gray-600">We ensure your safety through trusted landlords and secure booking processes.</p>
+      </div>
+
+      <!-- CARD 3 -->
+      <div class="bg-gray-50 p-8 rounded-2xl shadow-md hover:shadow-xl transition" data-aos="zoom-in" data-aos-delay="200">
+        <div class="text-blue-600 text-5xl mb-4">⚡</div>
+        <h3 class="text-xl font-semibold text-gray-800 mb-2">Fast Booking</h3>
+        <p class="text-gray-600">Get access to available hostels instantly and reserve your space with a single click.</p>
+      </div>
+
+      <!-- CARD 4 -->
+      <div class="bg-gray-50 p-8 rounded-2xl shadow-md hover:shadow-xl transition" data-aos="zoom-in" data-aos-delay="300">
+        <div class="text-blue-600 text-5xl mb-4">💰</div>
+        <h3 class="text-xl font-semibold text-gray-800 mb-2">Affordable Prices</h3>
+        <p class="text-gray-600">Find hostels that fit your budget — quality accommodation made affordable for students.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- AOS Animation Script -->
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init({
+    duration: 800,
+    once: true
+  });
+</script>
 
   <!-- Footer -->
   <footer class="bg-white py-6 text-center text-gray-600 border-t mt-10">
@@ -291,6 +335,7 @@
 
 </body>
 </html>
+
 
 
 
